// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion snapshots Accordion 1`] = `
<div>
  <div
    class="accordion   "
    data-testid="accordion"
  >
    <div
      class="accordion-header "
      data-testid="accordion-header"
    >
      Accordion example
      <span
        class="accordion-helper-text"
      >
        Helper
      </span>
      <span
        class="material-icons accordion-icon"
      >
        expand_more
      </span>
    </div>
  </div>
</div>
`;

exports[`Accordion snapshots Accordion default show 1`] = `
<div>
  <div
    class="accordion  show "
    data-testid="accordion"
  >
    <div
      class="accordion-header "
      data-testid="accordion-header"
    >
      Accordion example
      <span
        class="accordion-helper-text"
      >
        Helper
      </span>
      <span
        class="material-icons accordion-icon"
      >
        expand_less
      </span>
    </div>
    <div
      class="accordion-content "
      data-testid="accordion-content"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos eaque beatae pariatur maiores excepturi, sequi natus obcaecati vel neque reiciendis, cumque quis alias exercitationem quo tempore corrupti odit atque quae, facilis aut molestiae incidunt rerum dolore. Blanditiis quis at est, numquam ad temporibus error iure quae? Eius unde quam accusantium.
    </div>
  </div>
</div>
`;

exports[`Accordion snapshots Accordion filled 1`] = `
<div>
  <div
    class="accordion_filled   "
    data-testid="accordion"
  >
    <div
      class="accordion-header "
      data-testid="accordion-header"
    >
      Accordion example
      <span
        class="accordion-helper-text"
      >
        Helper
      </span>
      <span
        class="material-icons accordion-icon"
      >
        expand_more
      </span>
    </div>
  </div>
</div>
`;

exports[`Accordion snapshots Accordion filled default show 1`] = `
<div>
  <div
    class="accordion_filled   "
    data-testid="accordion"
  >
    <div
      class="accordion-header "
      data-testid="accordion-header"
    >
      Accordion example
      <span
        class="accordion-helper-text"
      >
        Helper
      </span>
      <span
        class="material-icons accordion-icon"
      >
        expand_more
      </span>
    </div>
  </div>
</div>
`;
